Revision history for Perl distribution PathTools.

3.16

 - Updated to version 3.06 of ppport.h, which provides backward
   compatibility XS layers for older perl versions.

 - Clarify in the docs for File::Spec's abs2rel() and rel2abs()
   methods that the cwd() function it discusses is
   Cwd::cwd(). [Spotted by Steven Lembark]

3.15  Tue Dec 27 14:17:39 CST 2005

 - The Cwd::getcwd() function on *nix is now a direct pass-through to
   the underlying getcwd() C library function when possible.  This is
   safer and faster than the previous implementation, which just did
   abs_path('.').  The pure-perl version has been kept for cases in
   which the XS version can't load, such as when running under
   miniperl. [Suggested by Nick Ing-Simmons]

 - When Cwd searches for a 'pwd' executable in the $PATH, we now stop
   after we find the first one rather than continuing the search.  We
   also avoid the $PATH search altogether when a 'pwd' was already
   found in a well-known and well-trusted location like /bin or
   /usr/bin. [Suggested by Nick Ing-Simmons]

 - On Win32 abs2rel($path, $base) was failing whenever $base is the
   root of a volume (such as C:\ or \\share\dir).  This has been
   fixed. [Reported by Bryan Daimler]

 - In abs2rel() on VMS, we've fixed handling of directory trees so
   that the test $file = File::Spec::VMS->abs2rel('[t1.t2.t3]file',
   '[t1.t2.t3]') returns 'file' instead of an empty string. [John
   E. Malmberg]

 - In canonpath() on VMS, '[]' was totally optimized away instead of
   just returning '[]'.  Now it's fixed. [John E. Malmberg]

3.14  Thu Nov 17 18:08:44 CST 2005

 - canonpath() has some logic in it that avoids collapsing a
   //double/slash at the beginning of a pathname on platforms where
   that means something special.  It used to check the value of $^O
   rather than the classname it was called as, which meant that
   calling File::Spec::Cygwin->canonpath() didn't act like cygwin